--- a/src/Services/Order/Order.API/appsettings.json
+++ b/src/Services/Order/Order.API/appsettings.json
@@ -12,5 +12,18 @@
   "ElasticConfiguration": {
     "Uri": "http://localhost:9200/"
   },
-  "AllowedHosts": "*"
+  "SubscriptionClientName": "Ordering",
+  "EventBusRetryCount": 5,
+  "EventBusConnection": "localhost",
+  "AllowedHosts": "*",
+
+  "mailTo": "kaanhas.52@gmail.com",
+  "mailkit": {
+    "smtpHost": "smtp.gmail.com",
+    "port": "587",
+    "useSSL": "false",
+    "username": "kaanh.ex.1@gmail.com",
+    "password": "",
+    "email": "kaanh.ex.1@gmail.com"
+  }
 }
